--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -9,11 +9,11 @@
             </div>
         </div>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="filter">
+            <input type="text" [(ngModel)]="listFilter" class="form-control" name="filter">
         </div>
         <div class="row">
             <div class="col-md-6">
-                <h3>Filtro:</h3>
+                <h3>Filtro: {{listFilter}}</h3>
             </div>
         </div>
         <!-- div.table-responsive>table.table>thead>tr>th*7 -->
@@ -23,7 +23,7 @@
                     <tr>
                         <th>
                             <button (click)="mostrarImagen()"class="bth btn-primary"
-                            type="button">Imagen</button>
+                            type="button">{{muestraImg?'Ocultar ':'Mostrar '}}Imagen</button>
                         </th>
                         <th>Imagen</th>
                         <th>Modelo</th>
@@ -36,7 +36,7 @@
                 </thead>
                 <!-- tbody>tr>td*7 -->
                 <tbody>
-                    <tr *ngFor="let producto of productos">
+                    <tr *ngFor="let producto of productos | productoFilter:listFilter">
                         <td *ngIf="muestraImg">
                             <img [src]="producto.ImagenUrl"
                             [title]="producto.Modelo"
