--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<!--<div>
   <h1>hola mundo!!!</h1>
 </div>
 
@@ -17,4 +17,12 @@
   <h2>Pago:{{alumno.pago|currency}}</h2>
 </div>
 <hr>
-<app-product-list></app-product-list>
+-->
+<div class="container">
+  <div class="row">
+
+<!-- <app-product-list></app-product-list> -->
+
+<app-distancia></app-distancia>
+</div>
+</div>
