--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
 
 <!-- <app-product-list></app-product-list> -->
 
-<app-distancia></app-distancia>
+<!-- <app-distancia></app-distancia> -->
+ <app-zodiaco></app-zodiaco>
 </div>
 </div>
